feat(dissolve): two-level dissolution — intent + feature folder
- Level 1: dissolve individual intent files into Memory/
- Level 2: cascades when last intent dissolves, offers to collapse
  CONTEXT.md + Status.md + folder into Memory/ Feature Summary
- Intents/ now stays permanently lean — only active work remains
- Plan updated with new design decision and verification checklist

Assisted by Claude

--- a/PLAN2026-02-24.md
+++ b/PLAN2026-02-24.md
@@ -18,7 +18,7 @@ Integrate Aline persistent memory into the BRAIN workflow at phase gates, implem
 | 1 | Aline phase-gate calls embedded in BRAIN flow | `.claude/commands/brain.md` | Done ✓ |
 | 2 | Stop hook safety net | `.claude/settings.json` | Removed — Aline CLI has no `commit` command. MCP-only. |
 | 3 | Per-intent dissolution prompt + lifecycle update | `.claude/commands/brain.md` | Done ✓ |
-| 4 | New `/dissolve` command | `.claude/commands/dissolve.md` | Done ✓ |
+| 4 | New `/dissolve` command — two-level: intent + feature folder | `.claude/commands/dissolve.md` | Done ✓ |
 | 5 | UserPromptSubmit hook — broad keyword trigger | `.claude/settings.json` | Done ✓ |
 | 6 | Aline Checkpoint behavior rule | `CLAUDE.md` | Done ✓ |
 | 7 | `/recap` updated — Aline recall first + Memory read | `.claude/commands/recap.md` | Done ✓ |
@@ -27,12 +27,20 @@ Integrate Aline persistent memory into the BRAIN workflow at phase gates, implem
 
 ## Design Decisions (from session)
 
-### Intent Dissolution Strategy: Option C — Per-intent dissolution on Done
+### Intent Dissolution Strategy: Option C — Two-level per-intent dissolution
 
-- Dissolution triggers **manually** — Claude prompts user after each intent is marked Done
-- Works for both **finite** (clear end) and **ongoing** (no end) projects
-- Each dissolved intent: extracts Goal + Outcome + decisions + follow-ups → appends to `Memory/ProjectName.md` → Aline commit → deletes intent file
-- `CONTEXT.md` and `Status.md` **survive** permanently — Status rows marked `Dissolved ✓` not deleted
+**Level 1 — Intent dissolution** (triggers after each intent marked Done):
+- Extracts Goal + Outcome + Key Decisions + Follow-ups → appends to `Memory/ProjectName.md` → Aline commit → deletes intent file → Status row = `Dissolved ✓`
+
+**Level 2 — Feature folder dissolution** (cascades automatically when last intent dissolves):
+- Claude checks if ALL intents in the folder are `Dissolved ✓`
+- If yes → prompts user to dissolve the feature folder too
+- Extracts CONTEXT.md scope + Status.md table → appends Feature Summary to `Memory/ProjectName.md` → Aline commit → deletes CONTEXT.md, Status.md, folder
+
+**Rules:**
+- Both levels are **manual** — always prompt, never auto-delete
+- Works for both **finite** and **ongoing** projects
+- `Intents/` stays permanently lean — only folders with active work exist
 - Memory stored in **both** `Memory/ProjectName.md` (human-readable) and Aline commits (AI-readable)
 
 ### Stop Hook: Not viable
@@ -137,7 +145,10 @@ User: no → file stays, no action
 - [ ] Approve Arrange → Aline commit offered
 - [ ] Complete one intent → dissolution prompt appears
 - [ ] Accept dissolution → `Memory/TestIdea.md` created, intent file deleted, Status row = `Dissolved ✓`
-- [ ] Run `/dissolve "TestIdea" 1` → full dissolution flow executes correctly
+- [ ] Run `/dissolve "TestIdea" 1` → Level 1 intent dissolution executes correctly
+- [ ] Dissolve last intent in a folder → Level 2 feature folder prompt appears
+- [ ] Accept Level 2 → Feature Summary appended to Memory, folder deleted from Intents/
+- [ ] Decline Level 2 → folder stays as lightweight archive, no action
 - [ ] Type "commit this" in any session → UserPromptSubmit hook fires, Claude offers Aline update after commit
 - [ ] Type "done for today" → Claude detects pause point, offers Aline update
 - [ ] Run `/recap` → Aline recall fires first, Memory file read if present, full output includes "Aline Context" and "Past Work (dissolved)" fields
