docs(plan): add introspection review + remaining gaps
- Problem statement assessment: 1 solved, 3 partial
- Gaps identified: Memory/ consolidation, mid-session compacting, multi-feature Aline recall
- Decision: test on real ongoing project before addressing gaps

Assisted by Claude

--- a/PLAN2026-02-24.md
+++ b/PLAN2026-02-24.md
@@ -61,35 +61,56 @@ Integrate Aline persistent memory into the BRAIN workflow at phase gates, implem
 
 ```
 Intents/
-  ProjectName/
-    CONTEXT.md          ← scope definition (never deleted)
-    Status.md           ← full history, rows: Active / Done / Dissolved ✓
-    03-ActiveThing.md   ← only currently active/pending intents
+  ActiveFeature/              ← has live intent files
+    CONTEXT.md                ← scope definition
+    Status.md                 ← rows: Active / Done / Dissolved ✓
+    03-ActiveThing.md         ← only in-progress intents exist as files
+                              ← completed features: folder gone entirely
 
 Memory/
-  ProjectName.md        ← rolling distilled log of all dissolved intents
+  CompletedFeatureA.md        ← all intents + Feature Summary (fully dissolved)
+  CompletedFeatureB.md        ← all intents + Feature Summary (fully dissolved)
+  ActiveFeature.md            ← grows as intents dissolve (folder still active)
 ```
+
+`Intents/` only ever contains folders with **live, active work**. Nothing lingers.
 
 ---
 
 ## Dissolution Flow
 
+### Level 1 — Intent
+
 ```
 Intent marked Done in Status.md
   ↓
-Claude prompts: "Intent N is Done. Want to dissolve it?
-  This will: extract key learnings → append to Memory/ProjectName.md
-  → Aline commit → delete intent file → mark row as Dissolved ✓"
+Claude prompts: "Intent N is Done. Want to dissolve it?"
   ↓
 User: yes →
-  1. Read intent file
-  2. Extract: Goal, Outcome, Key Decisions, Follow-ups
-  3. Append structured entry to Memory/ProjectName.md (create if missing)
-  4. Aline commit: "dissolved: intent N {ShortName} — {outcome}"
-  5. Delete intent .md file
-  6. Update Status.md row → Dissolved ✓
+  1. Extract: Goal, Outcome, Key Decisions, Follow-ups
+  2. Append entry to Memory/ProjectName.md
+  3. Aline commit: "dissolved intent N {ShortName} — {outcome}"
+  4. Delete intent file
+  5. Update Status.md row → Dissolved ✓
+  6. Check: all intents Dissolved ✓? → if yes, trigger Level 2
 
 User: no → file stays, no action
+```
+
+### Level 2 — Feature Folder (cascades from Level 1)
+
+```
+All intents in folder = Dissolved ✓
+  ↓
+Claude prompts: "All intents in {Feature} are dissolved. Dissolve the folder too?"
+  ↓
+User: yes →
+  1. Extract scope + full status from CONTEXT.md + Status.md
+  2. Append Feature Summary block to Memory/ProjectName.md
+  3. Aline commit: "dissolved feature {Feature} — all intents complete"
+  4. Delete CONTEXT.md, Status.md, folder
+
+User: no → folder stays as lightweight archive
 ```
 
 ---
@@ -135,6 +156,25 @@ User: no → file stays, no action
 |---|---|
 | `BRAIN-ALINE-STRATEGY.md` | Strategy reference only |
 | Any existing intent files | Runtime artifacts |
+
+---
+
+## Introspection — Problem Statement Review
+
+| # | Problem | Status | Gap Identified |
+|---|---|---|---|
+| 1 | Intent/folder bloat in local + GitHub repo | ✅ Solved | None — two-level dissolution handles this fully |
+| 2 | Persistence for infinite/ongoing projects | ⚠️ Partial | `Memory/` grows indefinitely — no consolidation mechanism yet |
+| 3 | Cross-session memory + compacting | ⚠️ Partial | Mid-session compacting unaddressed; Aline recall quality untested |
+| 4 | Multi-feature big projects | ⚠️ Partial | Aline recall may return noisy cross-feature context |
+
+### Remaining Gaps (deferred — test first)
+
+- **Gap 2:** `Memory/ProjectName.md` has no summarisation/consolidation mechanism for very long-running projects
+- **Gap 3:** Claude's native mid-session context compacting is not covered by Aline (Aline only helps at session boundaries)
+- **Gap 4:** Aline recall targeting is project-wide — no feature-scoped recall when multiple features exist
+
+**Decision:** Test BRAIN+Aline on a real ongoing project before addressing remaining gaps.
 
 ---
 
